--- a/guacamole/src/main/frontend/src/app/manage/templates/manageConnection.html
+++ b/guacamole/src/main/frontend/src/app/manage/templates/manageConnection.html
@@ -41,21 +41,31 @@
     <!-- Connection attributes section -->
     <div class="attributes">
         <guac-form namespace="'CONNECTION_ATTRIBUTES'" content="attributes"
-                   model="connection.attributes" model-only="!managementPermissions.canChangeAllAttributes"></guac-form>
+                model="connection.attributes" 
+                model-only="!managementPermissions.canChangeAllAttributes"></guac-form>
     </div>
 
     <!-- Connection parameters -->
     <h2 class="header">{{'MANAGE_CONNECTION.SECTION_HEADER_PARAMETERS' | translate}}</h2>
     <div class="section connection-parameters" ng-class="{loading: !parameters}">
         <guac-form namespace="getNamespace(connection.protocol)"
-                   content="protocols[connection.protocol].connectionForms.filter(x=>!x.advanced)"
-                   model="parameters"></guac-form>
+                content="protocols[connection.protocol].connectionForms | filter:isBasic"
+                model="parameters"></guac-form>
     </div>
-    <h2 class="header" ng-if="protocols[connection.protocol].connectionForms.filter(x=>x.advanced).length>0">{{'MANAGE_CONNECTION.SECTION_HEADER_PARAMETERS_ADVANCED' | translate}} <input type="checkbox" value="chkAdvanced" /></h2>
-    <div class="section connection-parameters" ng-class="{loading: !parameters}" ng-if="protocols[connection.protocol].connectionForms.filter(x=>x.advanced).length > 0 && chkAdvanced">
-        <guac-form namespace="getNamespace(connection.protocol)"
-                   content="protocols[connection.protocol].connectionForms.filter(x=>x.advanced)"
-                   model="parameters"></guac-form>
+
+    <!-- Advanced Section -->
+    <div ng-init="forms = protocols[connection.protocol].connectionForms">
+        <h2 class="header" ng-if="(forms | filter:{advanced: true}).length">
+            {{'MANAGE_CONNECTION.SECTION_HEADER_PARAMETERS_ADVANCED' | translate}} 
+            <input type="checkbox" ng-model="showAdvanced" />
+        </h2>
+
+        <div class="section connection-parameters" ng-class="{loading: !parameters}" 
+            ng-if="showAdvanced && (forms | filter:{advanced: true}).length">
+            <guac-form namespace="getNamespace(connection.protocol)"
+                    content="forms | filter:{advanced: true}"
+                    model="parameters"></guac-form>
+        </div>
     </div>
 
 
