--- a/guacamole/src/main/frontend/src/app/manage/templates/manageConnection.html
+++ b/guacamole/src/main/frontend/src/app/manage/templates/manageConnection.html
@@ -49,7 +49,7 @@
     <h2 class="header">{{'MANAGE_CONNECTION.SECTION_HEADER_PARAMETERS' | translate}}</h2>
     <div class="section connection-parameters" ng-class="{loading: !parameters}">
         <guac-form namespace="getNamespace(connection.protocol)"
-                content="protocols[connection.protocol].connectionForms | filter:isBasic"
+                content="protocols[connection.protocol].connectionForms | filter:{ advanced: [false, null, undefined] }"
                 model="parameters"></guac-form>
     </div>
 
