--- a/guacamole/src/main/frontend/src/app/manage/templates/manageConnection.html
+++ b/guacamole/src/main/frontend/src/app/manage/templates/manageConnection.html
@@ -4,7 +4,6 @@
     basicForms = (allForms | filter:{ advanced: [false, null, undefined] });
     advancedForms = (allForms | filter:{ advanced: true });
 ">
-{{allForms}}
     <!-- Main property editor -->
     <div class="header">
         <h2>{{'MANAGE_CONNECTION.SECTION_HEADER_EDIT_CONNECTION' | translate}}</h2>
@@ -51,20 +50,18 @@
 
     <!-- Connection parameters -->
     <h2 class="header">{{'MANAGE_CONNECTION.SECTION_HEADER_PARAMETERS' | translate}}</h2>
-    {{basicForms}}
     <div class="section connection-parameters" ng-class="{loading: !parameters}">
         <!-- <guac-form namespace="getNamespace(connection.protocol)"
                 content="protocols[connection.protocol].connectionForms | filter:{ advanced: [false, null, undefined] }"
                 model="parameters"></guac-form> -->
         <guac-form
             namespace="getNamespace(connection.protocol)"
-            content="::basicForms"
+            content="protocols[connection.protocol].connectionForms"
             model="parameters">
         </guac-form>
     </div>
-    {{advancedForms}}
     <!-- Advanced Section -->
-    <h2 class="header" ng-if="advancedForms.length">
+    <h2 class="header">
         {{'MANAGE_CONNECTION.SECTION_HEADER_PARAMETERS_ADVANCED' | translate}}
         <input type="checkbox" ng-model="showAdvanced" />
     </h2>
@@ -75,8 +72,9 @@
         <guac-form
             ng-if="showAdvanced"
             namespace="getNamespace(connection.protocol)"
-            content="::advancedForms"
-            model="parameters">
+            content="protocols[connection.protocol].connectionForms"
+            model="parameters"
+            advanced="true">
         </guac-form>
     </div>
 
